# coolmaster-cli

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: coverage.md  experiment-log.md  office-names.example.json  persistence-checklist.md  protocol-map.md  safe-write-matrix.md  samsung-bus-capture.md
src/coolmaster_cli/: __init__.py  cli.py
src/coolrev/: __init__.py  capture.py  cli.py  coolmaster.py  crc.py  modbus.py  protocols.py
tests/: test_cli.py  test_coolmaster.py  test_modbus.py  test_protocols.py
