[project]
name = "coolmaster-cli"
version = "0.1.0"
description = "Command-line toolkit for CoolMaster gateways connected to Samsung VRF systems."
requires-python = ">=3.11"
dependencies = []
license = "MIT"
readme = "README.md"
keywords = ["coolmaster", "coolautomation", "modbus", "samsung", "vrf", "hvac"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Home Automation",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
coolmaster-cli = "coolmaster_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coolmaster_cli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
